force-app/main/default/objects/Account/fields/Load_Factor__c.field-meta.xml
<CustomField>
    <fullName>Load_Factor__c</fullName>
    <description>This is the load factor or loss factor of the building typically found by taking the difference of the RSF and USF and dividing it by the USF.</description>
    <label>Load Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>