force-app/main/default/objects/Account/fields/Market_Formula__c.field-meta.xml
<CustomField>
    <fullName>Market_Formula__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Market__c/&apos; + Market_Lookup__r.Id  +&apos;/view&apos;, Market_Lookup__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>