force-app/main/default/objects/Account/fields/Next_Rent_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Rent_Payment_Amount__c</fullName>
    <label>Next Rent Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>