force-app/main/default/objects/Account/fields/Next_Rent_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Rent_Payment_Date__c</fullName>
    <label>Next Rent Payment Date</label>
    <type>Date</type>
</CustomField>