force-app/main/default/objects/Account/fields/Parking_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Parking_Ratio__c</fullName>
    <label>Parking Ratio</label>
    <type>TextArea</type>
</CustomField>