force-app/main/default/objects/Account/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>This is the address of the property and shall not include the suite number, floors, city, state or zip.</description>
    <label>Property Address</label>
    <type>TextArea</type>
</CustomField>