force-app/main/default/objects/Account/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>This is the name of the building, such as US Bank Tower.</description>
    <label>Property Name</label>
    <type>TextArea</type>
</CustomField>