force-app/main/default/objects/Account/fields/Pursuit_Status__c.field-meta.xml
<CustomField>
    <fullName>Pursuit_Status__c</fullName>
    <label>Pursuit Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Active_or_Inactive__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Intro Communication</fullName>
            </value>
            <value>
                <fullName>Direct Meeting</fullName>
            </value>
            <value>
                <fullName>Copy of Lease Received</fullName>
            </value>
            <value>
                <fullName>Evaluation/Abstract</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>