force-app/main/default/objects/Account/fields/Renewal_Notification_Begins__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notification_Begins__c</fullName>
    <label>Renewal Notification Begins</label>
    <type>Date</type>
</CustomField>