force-app/main/default/objects/Account/fields/Renewal_Notification_Ends__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notification_Ends__c</fullName>
    <label>Renewal Notification Ends</label>
    <type>Date</type>
</CustomField>