force-app/main/default/objects/Account/fields/Renewal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rate__c</fullName>
    <label>Renewal Rate</label>
    <type>TextArea</type>
</CustomField>