force-app/main/default/objects/Account/fields/Rent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rent_Notes__c</fullName>
    <label>Rent Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>