force-app/main/default/objects/Account/fields/Restoration_Diction__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Diction__c</fullName>
    <label>Restoration Diction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>