force-app/main/default/objects/Account/fields/Right_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Right_Obligation__c</fullName>
    <label>Right/Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Obligation</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>