force-app/main/default/objects/Account/fields/Right_to_Relocate__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Relocate__c</fullName>
    <label>Right to Relocate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>