force-app/main/default/objects/Account/fields/Right_to_Remeasure__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Remeasure__c</fullName>
    <label>Right to Remeasure</label>
    <type>TextArea</type>
</CustomField>