force-app/main/default/objects/Account/fields/ROFO__c.field-meta.xml
<CustomField>
    <fullName>ROFO__c</fullName>
    <label>ROFO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>