force-app/main/default/objects/Account/fields/ROFO_Notes__c.field-meta.xml
<CustomField>
    <fullName>ROFO_Notes__c</fullName>
    <label>ROFO Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>