force-app/main/default/objects/Account/fields/ROFR_Notes__c.field-meta.xml
<CustomField>
    <fullName>ROFR_Notes__c</fullName>
    <label>ROFR Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>