force-app/main/default/objects/Account/fields/RTE_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>RTE_Suite_Number__c</fullName>
    <label>RTE Suite Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>