force-app/main/default/objects/Account/fields/RTExpand__c.field-meta.xml
<CustomField>
    <fullName>RTExpand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTExpand</label>
    <type>Checkbox</type>
</CustomField>