force-app/main/default/objects/Account/fields/Securitization_Notes__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Notes__c</fullName>
    <label>Securitization Notes</label>
    <type>TextArea</type>
</CustomField>