force-app/main/default/objects/Account/fields/Starting_Rate__c.field-meta.xml
<CustomField>
    <fullName>Starting_Rate__c</fullName>
    <label>Starting Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>