force-app/main/default/objects/Account/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <label>Storage</label>
    <type>TextArea</type>
</CustomField>