force-app/main/default/objects/Account/fields/Submarket_Formula__c.field-meta.xml
<CustomField>
    <fullName>Submarket_Formula__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Submarket__c/&apos; + Submarket_Lookup__r.Id  + &apos;/view&apos;,  Submarket_Lookup__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submarket</label>
    <type>Text</type>
</CustomField>