force-app/main/default/objects/Account/fields/Submarket_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Submarket_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submarket</label>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>