force-app/main/default/objects/Account/fields/Suite__c.field-meta.xml
<CustomField>
    <fullName>Suite__c</fullName>
    <description>This is the suite advertised by the company (and may be the only suite).</description>
    <label>Suite</label>
    <type>TextArea</type>
</CustomField>