force-app/main/default/objects/Account/fields/Suite_Floor__c.field-meta.xml
<CustomField>
    <fullName>Suite_Floor__c</fullName>
    <formula>if (isblank(text(Floor__c)),(Suite__c),( Suite__c &amp; &quot;/&quot; &amp; text( Floor__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite/Floor</label>
    <type>Text</type>
</CustomField>