force-app/main/default/objects/Account/fields/Suite_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Suite_Picklist__c</fullName>
    <label>Suite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>