force-app/main/default/objects/Account/fields/Tenant_Broker__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Broker__c</fullName>
    <label>Tenant Broker</label>
    <type>TextArea</type>
</CustomField>