force-app/main/default/objects/Account/fields/Tenant_Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Broker_Company__c</fullName>
    <label>Tenant Broker Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;W</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>Colliers</fullName>
            </value>
            <value>
                <fullName>Cresa</fullName>
            </value>
            <value>
                <fullName>Industry Partners</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
            <value>
                <fullName>Klabin Company</fullName>
            </value>
            <value>
                <fullName>Lee &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Murray Aronson</fullName>
            </value>
            <value>
                <fullName>Madison Partners</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NAI Capital</fullName>
            </value>
            <value>
                <fullName>Newmark</fullName>
            </value>
            <value>
                <fullName>PS Business Parks</fullName>
            </value>
            <value>
                <fullName>Regus</fullName>
            </value>
            <value>
                <fullName>Told Partners</fullName>
            </value>
            <value>
                <fullName>Transwestern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>