force-app/main/default/objects/Account/fields/Tenant_Broker_Company_new__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Broker_Company_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Broker Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <value>Contact: AccountId</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Tenant Broker Company)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>