force-app/main/default/objects/Account/fields/Tenant_Broker_new__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Broker_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Clients</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>