force-app/main/default/objects/Account/fields/Tenant_Entity__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Entity__c</fullName>
    <description>This is the name of the tenant that is the entity on the lease document.</description>
    <label>Tenant Entity</label>
    <type>TextArea</type>
</CustomField>