force-app/main/default/objects/Account/fields/Tenant_Notice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Notice_Contact__c</fullName>
    <label>Tenant Notice Contact</label>
    <type>TextArea</type>
</CustomField>