force-app/main/default/objects/Account/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term (Months)</label>
    <type>TextArea</type>
</CustomField>