force-app/main/default/objects/Account/fields/Termination_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Effective_Date__c</fullName>
    <label>Termination Effective Date</label>
    <type>Date</type>
</CustomField>