force-app/main/default/objects/Account/fields/Termination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee__c</fullName>
    <label>Termination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>