force-app/main/default/objects/Account/fields/Termination_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Description__c</fullName>
    <label>Termination Fee Description</label>
    <type>TextArea</type>
</CustomField>