force-app/main/default/objects/Account/fields/TI_s__c.field-meta.xml
<CustomField>
    <fullName>TI_s__c</fullName>
    <label>TI Allowance/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>