force-app/main/default/objects/Account/fields/True_Landlord__c.field-meta.xml
<CustomField>
    <fullName>True_Landlord__c</fullName>
    <description>This is the name of the true owner of the building and not the entity that is listed on the lease document.</description>
    <label>True Landlord</label>
    <type>TextArea</type>
</CustomField>