force-app/main/default/objects/Account/fields/True_Tenant__c.field-meta.xml
<CustomField>
    <fullName>True_Tenant__c</fullName>
    <label>True Tenant</label>
    <type>TextArea</type>
</CustomField>