force-app/main/default/objects/Account/fields/Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>Twitter_URL__c</fullName>
    <inlineHelpText>If no Twitter account, write “None”</inlineHelpText>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>