force-app/main/default/objects/Account/fields/Type_and_Cost__c.field-meta.xml
<CustomField>
    <fullName>Type_and_Cost__c</fullName>
    <label>Parking Type and Cost</label>
    <type>TextArea</type>
</CustomField>