force-app/main/default/objects/Account/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <label>Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>