force-app/main/default/objects/Account/fields/USF__c.field-meta.xml
<CustomField>
    <fullName>USF__c</fullName>
    <label>USF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>