force-app/main/default/objects/Account/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>This is the zip code of the building.</description>
    <label>Zip</label>
    <type>TextArea</type>
</CustomField>