force-app/main/default/objects/Account/recordTypes/Landlord.recordType-meta.xml
<RecordType>
    <fullName>Landlord</fullName>
    <active>true</active>
    <label>Landlord</label>
</RecordType>