force-app/main/default/objects/Account/validationRules/Current_and_Past_not_together.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_and_Past_not_together</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Investment_Type__c , &quot;Current&quot;),INCLUDES(Investment_Type__c , &quot;Past&quot;))</errorConditionFormula>
    <errorDisplayField>Investment_Type__c</errorDisplayField>
    <errorMessage>Current and Past Investment Types cannot be selected together</errorMessage>
</ValidationRule>