force-app/main/default/objects/Account/validationRules/LEXP_Date_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>LEXP_Date_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEXP__c  &lt;  LCD__c</errorConditionFormula>
    <errorDisplayField>LEXP__c</errorDisplayField>
    <errorMessage>LEXP date is earlier than the LCD date</errorMessage>
</ValidationRule>