force-app/main/default/objects/Account/validationRules/Majority_and_Minority_not_together.validationRule-meta.xml
<ValidationRule>
    <fullName>Majority_and_Minority_not_together</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Investment_Type__c , &quot;Majority&quot;),INCLUDES(Investment_Type__c , &quot;Minority&quot;))</errorConditionFormula>
    <errorDisplayField>Investment_Type__c</errorDisplayField>
    <errorMessage>Majority and Minority Investment Types cannot be selected together</errorMessage>
</ValidationRule>