force-app/main/default/objects/Account/validationRules/NA_cannot_be_by_itself.validationRule-meta.xml
<ValidationRule>
    <fullName>NA_cannot_be_by_itself</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Investment_Type__c , &quot;N/A&quot;),OR(INCLUDES(Investment_Type__c , &quot;Current&quot;),INCLUDES(Investment_Type__c , &quot;Past&quot;),INCLUDES(Investment_Type__c , &quot;Majority&quot;),INCLUDES(Investment_Type__c , &quot;Minority&quot;)))</errorConditionFormula>
    <errorDisplayField>Investment_Type__c</errorDisplayField>
    <errorMessage>N/A needs to be selected by itself</errorMessage>
</ValidationRule>